Changed positioning method to fix herotext and input overlap

--- a/CSS-Files/form.css
+++ b/CSS-Files/form.css
@@ -164,6 +164,8 @@ textarea{
 }
 
 .form__container {
+	position: relative;
+	top: 35%;
 	height: 55%;
 	overflow: auto;
 	padding: 0 5px 5px 10px;
