--- a/CSS-Files/style.css
+++ b/CSS-Files/style.css
@@ -42,7 +42,6 @@
 	position: relative;
 	top: 35%;
 	left: 5%;
-	height: 45%;
 }
 
 .leftSecText{
